compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__warning_variable_never_used_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn wibble() { Ok(5) }\npub fn main() { let five = wibble() }"
---
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:3:21
  │
3 │ pub fn main() { let five = wibble() }
  │                     ^^^^ This variable is never used

Hint: You can ignore it with an underscore: `_five`.
