compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__warnings_for_matches_on_literal_values_that_are_not_like_an_if_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n    pub fn main() {\n        case True {\n          _ -> 1\n        }\n    }\n        "
---
----- SOURCE CODE

    pub fn main() {
        case True {
          _ -> 1
        }
    }
        

----- WARNING
warning: Match on a literal value
  ┌─ /src/warning/wrn.gleam:3:14
  │
3 │         case True {
  │              ^^^^ There's no need to pattern match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
